docs/0.9/_sources/api/gammapy.astro.population.Paczynski1990Velocity.rst.txt
Paczynski1990Velocity
=====================

.. currentmodule:: gammapy.astro.population

.. autoclass:: Paczynski1990Velocity
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Paczynski1990Velocity.amplitude
      ~Paczynski1990Velocity.bounding_box
      ~Paczynski1990Velocity.bounds
      ~Paczynski1990Velocity.col_fit_deriv
      ~Paczynski1990Velocity.eqcons
      ~Paczynski1990Velocity.fit_deriv
      ~Paczynski1990Velocity.fittable
      ~Paczynski1990Velocity.fixed
      ~Paczynski1990Velocity.has_user_bounding_box
      ~Paczynski1990Velocity.has_user_inverse
      ~Paczynski1990Velocity.ineqcons
      ~Paczynski1990Velocity.input_units
      ~Paczynski1990Velocity.input_units_allow_dimensionless
      ~Paczynski1990Velocity.input_units_equivalencies
      ~Paczynski1990Velocity.input_units_strict
      ~Paczynski1990Velocity.inputs
      ~Paczynski1990Velocity.inverse
      ~Paczynski1990Velocity.linear
      ~Paczynski1990Velocity.meta
      ~Paczynski1990Velocity.model_constraints
      ~Paczynski1990Velocity.model_set_axis
      ~Paczynski1990Velocity.n_inputs
      ~Paczynski1990Velocity.n_outputs
      ~Paczynski1990Velocity.name
      ~Paczynski1990Velocity.outputs
      ~Paczynski1990Velocity.param_names
      ~Paczynski1990Velocity.param_sets
      ~Paczynski1990Velocity.parameter_constraints
      ~Paczynski1990Velocity.parameters
      ~Paczynski1990Velocity.return_units
      ~Paczynski1990Velocity.separable
      ~Paczynski1990Velocity.standard_broadcasting
      ~Paczynski1990Velocity.tied
      ~Paczynski1990Velocity.v_0

   .. rubric:: Methods Summary

   .. autosummary::

      ~Paczynski1990Velocity.__call__
      ~Paczynski1990Velocity.copy
      ~Paczynski1990Velocity.deepcopy
      ~Paczynski1990Velocity.evaluate
      ~Paczynski1990Velocity.n_submodels
      ~Paczynski1990Velocity.prepare_inputs
      ~Paczynski1990Velocity.prepare_outputs
      ~Paczynski1990Velocity.rename
      ~Paczynski1990Velocity.render
      ~Paczynski1990Velocity.sum_of_implicit_terms
      ~Paczynski1990Velocity.with_units_from_data
      ~Paczynski1990Velocity.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: eqcons
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: tied
   .. autoattribute:: v_0

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: n_submodels
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
